--- a/ingresos.Rmd
+++ b/ingresos.Rmd
@@ -1,9 +1,11 @@
 ---
+title:  Ingresos en la Casen 2020 (Etnias)
+
 author:
 - name: VE-CC-AJ
   affiliation: DataIntelligence
 subtitle: | 
-  pobreza total individual
+  Ingresos y Gini por comuna según la Casen del 2020.
   
 header-includes:
    - \usepackage[]{babel}
@@ -25,21 +27,13 @@ date: `r format(Sys.time(), "%d-%m-%Y")`
 }
 </style>
 
-### Índice:
+# Introducción {#test1}
 
-#### [Introducción](#test1)
+## Recordemos los cuatro datos cuantitativos fundamentales de la generación de los ingresos:
 
-
-## Introducción {#test1}
-
-### 1. Recordemos que las cuatro preguntas cualitativas de la generación de los ingresos (PCGI) son:
-
-    ¿Cuál es su ocupación u oficio? o9a
-
-### 2. Las variables de ingreso a utilizar serán:
- |**Tipo**| | | 
+ | | | | 
 :-----:|:-----:|:-----:|:-----:|:-----:
- |  |Ingreso total|Ingreso autónomo|Ingreso del trabajo|Ingreso de la ocupación principal
+ | **Tipo** |Ingreso total|Ingreso autónomo|Ingreso del trabajo|Ingreso de la ocupación principal
 año| | |
 2017|ytotcor|ytrabajocor|ytrabajocor|yoprcor
 2015|ytotcor|ytrabajocor|ytrabajocor|yoprcor
@@ -48,13 +42,9 @@ año| | |
 2009|ytrabaj |yautaj |ytrabaj      |yopraj
 2006|ytrabaj |yautaj |ytrabaj      |yopraj
 
-</br>
-
 
 ```{r , message=FALSE, warning=FALSE, include = FALSE, eecho = FALSE}
-
 #suppressWarnings(library(RODBC))
-
 library(ggplot2)
 library(ggpubr)
 library(markdown)
@@ -91,47 +81,50 @@ library(haven)
 library(readr)
 library(sjmisc)
 library(WriteXLS)
-
 library(ineq)
 library(readstata13)
 library(reldist)
-
 library(foreign)
-
 ```
 
 
-#### Lectura de bases de datos Casen
+El mismo concepto asociado a Ingreso total (**ytotcor**) se mantiene en la Casen del 2020.
 
-```{r, warning=FALSE}
+## Lectura de bases de datos Casen 2020
+
+```{r, warning=FALSE, message=FALSE}
 casen2020 <- read.spss("../../Archivos_grandes/Casen en Pandemia 2020 SPSS.sav")
 casen2020 <- as.data.frame(casen2020)
-
 ```
 
-Arreglemos ALFABETISMO EN E6A:
+## Despleguemos los 100 primeros registros:
 
 
 ```{r}
-casen2020 <-casen2020[c(1:100),]
-kbl(casen2020 ) %>%
+casen2020_sub <-casen2020[c(1:100),]
+kbl(casen2020_sub ) %>%
   kable_styling(bootstrap_options = c("striped", "hover")) %>%
   kable_paper() %>%
   scroll_box(width = "100%", height = "300px")
 ```
 
 
+# Etnia
+
+
+
+
+<br>
+
+## Homologemos las categorías de respuesta de ALFABETISMO en E6A de la Casen 2020:
+
+Primero transformemos los factores del dataframe a carácteres:
 
 ```{r}
 casen2020 <- data.frame(lapply(casen2020  ,as.character), stringsAsFactors=FALSE)
 ```
 
-
-
-
-
-
-Realizamos nuestra asignación:
+Realizamos nuestra asignación: recordemos que todos aquellos que afirman que sí asistieron a la educación básica y superiores se consideran "Alfabetos".
 
 ```{r, warning=FALSE}
 casen2020$e6a[casen2020$e6a == "Educación Media Científico-Humanista"]  <- "Sí"
@@ -151,133 +144,146 @@ casen2020$e6a[casen2020$e6a == "Postgrado Incompleto"]  <- "Sí"
 casen2020$e6a[casen2020$e6a == "Sala cuna"]  <- "No"
 casen2020$e6a[casen2020$e6a == "Primaria o Preparatoria (Sistema antiguo)"]  <- "Sí"
 casen2020$e6a[casen2020$e6a == "Postgrado Completo"]  <- "Sí"
-
-# Hacemos que el campo char de expc sea numerico:
-# df_2020_mexpc <- as.numeric(df_2020_m$expc)
 ```
 
+<br>
+
+## Homologemos las categorías de respuesta de **pobreza** en la Casen 2020:
+
+```{r}
+a <- unique(casen2020$pobreza)
+a <- as.data.frame(a)
+a
+```
+
+
+```{r}
+casen2020$pobreza[casen2020$pobreza == "No pobres"]  <- "no pobre"
+casen2020$pobreza[casen2020$pobreza == "Pobres extremos"]  <- "pobre extremo"
+casen2020$pobreza[casen2020$pobreza == "Pobres no extremos"]  <- "pobre"
+```
+
+
+```{r}
+a <- unique(casen2020$pobreza)
+a <- as.data.frame(a)
+a
+```
+
+<br>
+
+## Homologemos las categorías de respuesta de Etnia:
+
+r3. En Chile, la ley reconoce diez pueblos indígenas, ¿[NOMBRE] pertenece? (sic)
+
+```{r}
+a <- unique(casen2020$r3)
+a <- as.data.frame(a)
+a
+```
+
+
+```{r}
+casen2020$r3[casen2020$r3 == "Aimara" ]  <- "Aymara"
+casen2020$r3[casen2020$r3 == "No pertenece a ninguno de estos pueblos indígenas" ]  <-  "NS/NR"
+casen2020$r3[casen2020$r3 == "Mapuche"]  <- "Mapuche"
+casen2020$r3[casen2020$r3 == "Diaguita"]  <- "Diaguita"
+casen2020$r3[casen2020$r3 == "Atacameño (Likan-Antai)" ]  <- "Atacameño"
+casen2020$r3[casen2020$r3 == "Quechua" ]  <- "Quechua"
+casen2020$r3[casen2020$r3 == "Yámana o Yagán" ]  <- "Yagán"
+casen2020$r3[casen2020$r3 == "Rapa-Nui o Pascuenses"]  <- "Pascuense"
+casen2020$r3[casen2020$r3 == "Collas"]  <- "Coya"
+casen2020$r3[casen2020$r3 == "Kawashkar o Alacalufes" ]  <- "Alacalufe"
+casen2020$r3[casen2020$r3 == "Chango" ]  <- "Chango"
+```
 
 
 
 ```{r}
-casen2020 <-casen2020[c(1:100),]
-kbl(casen2020) %>%
-  kable_styling(bootstrap_options = c("striped", "hover")) %>%
-  kable_paper() %>%
-  scroll_box(width = "100%", height = "300px")
+a <- unique(casen2020$r3)
+a <- as.data.frame(a)
+a
 ```
 
-
-
-## Etnia
+## Para las categorías de respuesta de sexo no hay que homologar nada:
 
 ```{r}
-# casen2017 <<- readRDS("casen/casen_2017_c.rds")
-# casen2020 <<- readRDS("casen/casen_2020.rds")
+a <- unique(casen2020$sexo)
+a <- as.data.frame(a)
+a
 ```
 
-###########################
 
 
+## Calculamos los promedios comunales de ytotcor:
 
 
 ```{r , message=FALSE, warning=FALSE, results='hide'}
 library(reldist)
-
 casen2020$ytotcor <- as.numeric(casen2020$ytotcor)
-
 ab_2020 <- casen2020[!is.na(casen2020$ytotcor),]
 Q <- quantile(ab_2020$ytotcor, probs=c(.25, .75), na.rm = FALSE)
 iqr <- IQR(ab_2020$ytotcor)
 eliminated <- subset(ab_2020, ab_2020$ytotcor > (Q[1] - 1.5*iqr) & ab_2020$ytotcor < (Q[2]+1.5*iqr))
-
 a <- eliminated$ytotcor
 b <- eliminated$comuna
 c <- eliminated$sexo
 d <- eliminated$r3 #etnia
-xx <- eliminated$e6a 
-
+xx <- eliminated$e6a #alfabetismo
 anio <- 2020
 promedios_grupales <-aggregate(a, by=list(b, c, d ,xx), FUN = mean , na.rm = TRUE)
-
 promedios_grupales_sd <-aggregate(a, by=list(b, c, d ,xx), FUN = sd , na.rm = TRUE)
 promedios_grupales_gini <-aggregate(a, by=list(b, c, d ,xx), FUN = gini , na.rm = TRUE)
-
 promedios_grupales$sd = promedios_grupales_sd$sd.a
 promedios_grupales$gini = promedios_grupales_gini$gini.a
-
 d <- promedios_grupales
-
 d$Año <- anio 
-
 names(d)[1] <- "Comuna"
 names(d)[4] <- "Alfabetismo"
 names(d)[2] <- "Sexo"
 names(d)[3] <- "Etnia"
-# names(d)[4] <- "Promedio del Ingreso"
-# names(d)[5] <- "Desviación standard"
-# names(d)[6] <- "Gini"
-# names(d)[7] <- "Año"
-
 dd <- mutate_if(d, is.factor, as.character)
-# 
-dd$clave <- paste0(dd$Comuna,dd$Sexo,dd$Etnia)
-
+dd$clave <- paste0(dd$Comuna,dd$Sexo,dd$Etnia, dd$Alfabetismo)
 head(dd,10)
 ```
 
-
-Hay que construir la ttcc de frecuencias:
-
-
+## Hay que construir la ttcc de frecuencias de las poblaciones sin incluir ingresos **para ponderar y hacer promedios de promedios**:
 
 ```{r}
-
 eliminated <- casen2020
 b <- eliminated$comuna
 c <- eliminated$sexo
-d <- eliminated$r3
-e <- eliminated$e6a
-
+d <- eliminated$r3 #etnia
+e <- eliminated$e6a #alfabetismo
 eliminated$expc <- as.numeric(eliminated$expc)
-
-
 anio <- 2020
-
 cross_tab =  xtabs(eliminated$expc ~   + unlist(b)  + unlist(c)  + unlist(d)  + unlist(e),aggregate(eliminated$expc ~   + unlist(b) + unlist(c) + unlist(d) + unlist(e),eliminated,mean))
-
 tabla <- as.data.frame(cross_tab)
 d <-tabla[!(tabla$Freq == 0),]
 d$Año <- anio
-
-
-
 names(d)[1] <- "comuna"
 names(d)[2] <- "Sexo"
 names(d)[3] <- "Etnia"
 names(d)[4] <- "Alfa" 
 names(d)[5] <- "Frec" 
 names(d)[6] <- "Anio" 
-
-
 ee <- mutate_if(d, is.factor, as.character)
-
-ee$clave <- paste0(ee$comuna,ee$Sexo,ee$Etnia)
-
+ee$clave <- paste0(ee$comuna,ee$Sexo,ee$Etnia, ee$Alfa)
 head(ee,10)
 ```
 
 ```{r}
-new_dataset <-dd  %>% left_join(ee, by ="clave")
+write_xlsx(ee,"ttcc_poblacionales_por_4_categorías.xlsx")
+```
 
+## Hacemos la unión entre las frecuencias y los datos de ingresos totales y sus asociados.
+
+```{r}
+new_dataset <-dd  %>% left_join(ee, by ="clave")
 head(new_dataset,10)
 ```
 
-
-
-Hay que integrar el codigo comunal:
-
-
+## Hay que integrar el código comunal:
 
 ```{r}
 codigos_comunales <- readRDS(file = "../../archivos_grandes/codigos_comunales_2011-2017.rds")
@@ -288,22 +294,25 @@ la_union_001 = merge( x = new_dataset, y = codigos_comunales, by = "Comuna", all
 head(la_union_001,10)
 ```
 
-gggggggg
+## Excluímos lo que no nos interesa y mantenemos lo que sí.
 
 
 ```{r}
 la_union_001 <- la_union_001[,-c(6,8:13)]
 uf <- la_union_001[,c(1,3,4,2,5,6,8,9,7)]
-
+write_xlsx(uf,"ingresos_2020_Casen.xlsx")
 ```
 
 
 ```{r}
-write_xlsx(uf,"ingresos.xlsx")
+
+head(uf,10)
 ```
 
 
-
+<br>
+<br>
+<br>
 
 
 
@@ -395,9 +404,12 @@ write_xlsx(uf,"ingresos.xlsx")
 
 
 
-## Migra
+# Migra
 
 
+<br>
+<br>
+<br>
 
 
 
