--- a/ingresos_etnia_2020_Casen.Rmd
+++ b/ingresos_etnia_2020_Casen.Rmd
@@ -306,9 +306,13 @@ write_xlsx(uf,"ingresos_2020_Casen_Etnia.xlsx")
 ```
 
 
-```{r}
 
-head(uf,10)
+
+```{r}
+kbl(uf) %>%
+  kable_styling(bootstrap_options = c("striped", "hover")) %>%
+  kable_paper() %>%
+  scroll_box(width = "100%", height = "200px")
 ```
 
 Total de filas:
