--- a/pobreza_nueva_metodologia/prueba_ing_ttcc.Rmd
+++ b/pobreza_nueva_metodologia/prueba_ing_ttcc.Rmd
@@ -79,7 +79,7 @@ Lectura de bases de datos Casen
 
 ```{r, message=FALSE, warning=FALSE}
 
-direccion <- switch(2,"C:/Users/enamo/Desktop/Shiny-R/Casen_en_pandemia_2020/casen/","C:/Users/chris/OneDrive/Documentos/archivos_grandes/")
+direccion <- switch(2,"C:/Users/enamo/Desktop/Shiny-R/Casen_en_pandemia_2020/casen/","C:/Users/chris/Desktop/archivos grandes/")
 
 dataset_06 <<- readRDS(paste0(direccion,"casen_2006_c.rds"))
 dataset_06 <- mutate_if(dataset_06, is.factor, as.character)
@@ -93,7 +93,7 @@ dataset_15 <<- readRDS(paste0(direccion,"casen_2015_c.rds"))
 dataset_15 <- mutate_if(dataset_15, is.factor, as.character)
 dataset_17 <<- readRDS(paste0(direccion,"casen_2017_c.rds"))
 dataset_17 <- mutate_if(dataset_17, is.factor, as.character)
-dataset_20 <<- readRDS(paste0(direccion,"casen_2020_e1.rds"))
+dataset_20 <<- readRDS(paste0(direccion,"casen_2020_c.rds"))
 dataset_20 <- mutate_if(dataset_20, is.factor, as.character)
 ```
 
@@ -103,7 +103,7 @@ Base de datos Complementaria de Ingresos Nueva Metodología Casen 2006 SPSS
 
 ```{r, message=FALSE, warning=FALSE}
 dataset_06$clave <- paste0(dataset_06$SEG,dataset_06$O,dataset_06$F)
-MN_2006 <- read.spss("C:/Users/chris/OneDrive/Documentos/archivos_grandes/Ingresos MN 2006.sav", to.data.frame = TRUE)
+MN_2006 <- read.spss("C:/Users/chris/Desktop/archivos grandes/Ingresos MN 2006.sav", to.data.frame = TRUE)
 MN_2006$clave <- paste0(MN_2006$seg,MN_2006$o,MN_2006$f)
 
 MN_2006_2 <- MN_2006[,c("clave","pobreza_MN")]
@@ -115,7 +115,7 @@ Base de datos Complementaria de Ingresos Nueva Metodología Casen 2009 SPSS
 	
 ```{r, message=FALSE, warning=FALSE}
 dataset_09$clave <- paste0(dataset_09$SEGMENTO,dataset_09$IDVIV,dataset_09$HOGAR,dataset_09$O)
-MN_2009 <- read.spss("C:/Users/chris/OneDrive/Documentos/archivos_grandes/Ingresos MN 2009.sav", to.data.frame = TRUE)
+MN_2009 <- read.spss("C:/Users/chris/Desktop/archivos grandes/Ingresos MN 2009.sav", to.data.frame = TRUE)
 MN_2009$clave <- paste0(MN_2009$SEGMENTO,MN_2009$IDVIV,MN_2009$HOGAR,MN_2009$O)
 
 MN_2009_2 <- MN_2009[,c("clave","pobreza_MN")]
@@ -127,7 +127,7 @@ Base Complementaria Ingresos Nueva Metodología Casen 2011 (submuestra noviembre
 
 ```{r, message=FALSE, warning=FALSE}
 dataset_11$clave <- paste0(dataset_11$folio,dataset_11$o)
-MN_2011 <- read.spss("C:/Users/chris/OneDrive/Documentos/archivos_grandes/Ingresos MN 2011.sav", to.data.frame = TRUE)
+MN_2011 <- read.spss("C:/Users/chris/Desktop/archivos grandes/Ingresos MN 2011.sav", to.data.frame = TRUE)
 MN_2011$clave <- paste0(MN_2011$folio,MN_2011$o )
 
 MN_2011_2 <- MN_2011[,c("clave","pobreza_MN")]
@@ -139,7 +139,7 @@ Para 2013 la pobreza con la nueva metodología ya esta incluida en la base de da
 
 ```{r, message=FALSE, warning=FALSE}
 dataset_13$clave <- paste0(dataset_13$folio,dataset_13$o)
-MN_2013 <- as.data.frame(read_dta("C:/Users/chris/OneDrive/Documentos/archivos_grandes/casen_2013_ymt.dta"))
+MN_2013 <- as.data.frame(read_dta("C:/Users/chris/Desktop/archivos grandes/casen_2013_ymt.dta"))
 MN_2013$clave <- paste0(MN_2013$folio,MN_2013$o )
 
 MN_2013_2 <- MN_2013[,c("clave","pobreza_mt")]
@@ -343,7 +343,7 @@ names(df)[4] <- "Alfabetismo"
 names(df)[5] <- "Etnia"
 df$Año = xx
 
-direc_cod_com <- paste0("C:/Users/chris/OneDrive/Documentos/archivos_grandes/codigos_comunales_2006-2020.rds")
+direc_cod_com <- paste0("C:/Users/chris/Desktop/archivos grandes/codigos_comunales_2006-2020.rds")
 codigos_comunales <- readRDS(file = direc_cod_com)
 names(codigos_comunales)[1] <- "Código"
 names(codigos_comunales)[2] <- "Comuna"
@@ -560,7 +560,7 @@ names(df)[4] <- "Alfabetismo"
 names(df)[5] <- "Origen"
 df$Año = xx
 
-direc_cod_com <- paste0("C:/Users/chris/OneDrive/Documentos/archivos_grandes/codigos_comunales_2006-2020.rds")
+direc_cod_com <- paste0("C:/Users/chris/Desktop/archivos grandes/codigos_comunales_2006-2020.rds")
 codigos_comunales <- readRDS(file = direc_cod_com)
 names(codigos_comunales)[1] <- "Código"
 names(codigos_comunales)[2] <- "Comuna"
